meecast (0.7) unstable; urgency=low

  * BB Fixed problem with background in main and hours form
  * BB Changed position of button menu in main form 
  * BB Increased font for weather description and day name
  * BB Redisegned tabs in main and fullweather forms
  * BB Redisigned Main and Fullweather forms
  * BB Fixed problem with Main page after removing all stations
  * Disabled debug for gismeteo.ru and foreca.com sources
  * Fixed problem with big size of icon in lockscreen applet
  * Fixed problem with Settings pages - Lockscreen and StandbyScreen

 -- Vlad Vasiliev <vlad@gas.by>  Fri, 22 Feb 2012 19:31:23 +0200

meecast (0.6.10) unstable; urgency=low

  * Added icons for hko.gov.hk
  * Added icons for foreca.com
  * Updated Chinese, Bulgarian, Catalan, Turkish, Germany, Dutch, Slovak translations
  * Added new iconset Atmos. Thanks Andrew Zhilin
  * Fixed problem with feels like in source gismeteo.ru
  * Fixed problem with timezone in source gismeto.ru
  * Fixed problem with updating weather forecast data for new station 
  * Added description string to gismeteo.ru 
  * Fixed problem with first updating weather forecast in source yr.no
  * Changed icon 'fog' for LockScreen. Thanks Red Verge
  * Fixed menu bar position and behaviour. Thanks Nakram.

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 20 Jan 2012 19:31:23 +0200

meecast (0.6.9) unstable; urgency=low

  * Fixed icon ICY in Epona set 
  * Fixed problem with current weather in gismeteo.ru source
  * Added icon and description string to gismeteo.ru 
  * Fixed problem with weather forecast in gismeteo.ru for Australia
  * Changed splash. Thanks Andrew Zhilin (wazd)
  * Added icon for hko.gov.hk
  * Added icons for foreca.com
  * Added UV-index to hko.gov.hk source
  * Fixed problem with N/A UV-index
  * Disabled label "Show on map" if case map isn't available
  * Added new iconset Noun  - The Noun Project icons are designed by Adam
    Whitcroft from The Noun Project. http://thenounproject.com"